# langextract

./: pyproject.toml
langextract/core/: data.py
tests/: data_lib_test.py  extract_precedence_test.py
