[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "langextract"
version = "0.1.0"
description = "A Python library for extracting structured information from text using language models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "langextract contributors" }
]
keywords = ["nlp", "llm", "information-extraction", "language-model", "text-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "google-generativeai>=0.5.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/langextract/langextract"
Repository = "https://github.com/langextract/langextract"
Issues = "https://github.com/langextract/langextract/issues"
Changelog = "https://github.com/langextract/langextract/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["langextract"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
# Relaxing strict mypy a bit for personal exploration — too noisy when prototyping
allow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Removed --cov-report=xml locally since I don't use CI coverage uploads
addopts = "--cov=langextract --cov-report=term-missing"

[tool.coverage.run]
source = ["src/langextract"]
omit = ["*/tests/*", "*/__init__.py"]
